fixed small styling issues for submission form on mobile

--- a/styles.css
+++ b/styles.css
@@ -122,15 +122,14 @@ body {
 @media (max-width: 992px) {
 	.submit-map .container-fluid {
 		padding: 0% 10%;
-	
 	}
 }
 
 .placeholder-center ::placeholder {
 	text-align: center;
-	font-size: 1.3rem;
+	font-size: 1rem;
 }
 
-.custom-category {
+/*.custom-category {
 	padding: 0% 30%;
-}
+}*/
